test_data/typeerror/core-20233.py
variables = dict(variables or {})
variables['value'] = value

try:
    variables['value_json'] = json.loads(value)
except ValueError:
    pass